...
            android:textStyle="bold" />

    </LinearLayout>

    <!-- See Latest Events Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnLatestEvents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        app:cardCornerRadius="12dp"
...
