<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEventActivity">



    <TextView
        android:id="@+id/textView_latest_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D9D9D9"
        android:text="Add Event"
        android:padding="10dp"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Name"
        app:layout_constraintTop_toBottomOf="@id/textView_latest_event"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Example Name: Swim Lesson"
        app:layout_constraintTop_toBottomOf="@id/textView_latest_event"
        app:layout_constraintStart_toEndOf="@id/textView_event_name"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Time"
        app:layout_constraintTop_toBottomOf="@id/add_event_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_event_times"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Example Time: 5pm"
        app:layout_constraintTop_toBottomOf="@id/add_event_name"
        app:layout_constraintStart_toEndOf="@id/textView_times"
        app:layout_constraintEnd_toStartOf="@id/weekday_spinner" />

    <Spinner
        android:id="@+id/weekday_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/add_event_times"
        app:layout_constraintBottom_toBottomOf="@id/add_event_times"
        app:layout_constraintStart_toEndOf="@id/add_event_times"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Location"
        app:layout_constraintTop_toBottomOf="@id/add_event_times"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_event_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Example Location: DICE 8th floor"
        app:layout_constraintTop_toBottomOf="@id/add_event_times"
        app:layout_constraintStart_toEndOf="@id/textView_location"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Price"
        app:layout_constraintTop_toBottomOf="@id/add_event_location"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_event_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Example price: 30"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/add_event_location"
        app:layout_constraintStart_toEndOf="@id/textView_price"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Registration Period"
        app:layout_constraintTop_toBottomOf="@id/add_event_price"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_event_period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Example period: 2 days"
        app:layout_constraintTop_toBottomOf="@id/add_event_price"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entrant Limit"
        app:layout_constraintTop_toBottomOf="@id/add_event_period"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_event_ent_limit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Example: 60"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/add_event_period"
        app:layout_constraintStart_toEndOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView_sample_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lottery Winners"
        app:layout_constraintTop_toBottomOf="@id/add_event_ent_limit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_event_sample_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Example: 20"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/add_event_ent_limit"
        app:layout_constraintStart_toEndOf="@id/textView_sample_size"
        app:layout_constraintEnd_toEndOf="parent" />
    <Switch
        android:id="@+id/switch_geolocation_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enable Geolocation Requirement"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_event_sample_size"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_geo_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Latitude:"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/switch_geolocation_required"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/input_geo_latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="e.g., 53.5461"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/switch_geolocation_required"
        app:layout_constraintStart_toEndOf="@id/textView_geo_lat"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_geo_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Longitude:"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/input_geo_latitude"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_geo_longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="-113.4938"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/input_geo_latitude"
        app:layout_constraintStart_toEndOf="@id/textView_geo_lng"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_geo_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Radius (m):"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/input_geo_longitude"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_geo_radius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="500"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/input_geo_longitude"
        app:layout_constraintStart_toEndOf="@id/textView_geo_radius"
        app:layout_constraintEnd_toEndOf="parent" />



    <EditText
        android:id="@+id/add_event_description"
        android:layout_width="190dp"
        android:layout_height="212dp"
        android:backgroundTint="#D9D9D9"
        android:gravity="top|start"
        android:hint="Example description: Learn how to swim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_event_image_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_geolocation_required"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/button_back_add_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintTop_toBottomOf="@id/add_event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save_event_add_event"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_save_event_add_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Save Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_back_add_event"
        app:layout_constraintTop_toBottomOf="@id/add_event_description" />

    <ImageView
        android:id="@+id/add_event_image_poster"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:background="#d9d9d9"
        android:src="@android:drawable/ic_menu_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_event_description"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Poster Here"
        app:layout_constraintBottom_toTopOf="@+id/add_event_image_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_event_description"
        app:layout_constraintTop_toTopOf="@+id/add_event_description" />

    <!--    <Button-->
<!--        android:id="@+id/add_event_button_upload_image"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Save Image"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.562"-->
<!--        app:layout_constraintStart_toStartOf="@+id/add_event_image_poster"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/add_event_image_poster" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
