...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Filter Events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_my_event_add_event" />

    <Button
        android:id="@+id/button_my_event_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
...
